43. Creating a User DTO and returning the token

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "SqliteDatingAppConnection" : "Data source=DatingSqLite.db"
-  }
+  },
+  "TokenKey" : "This is my custom Secret key for authentication for no reason i am exhausted to complete"
 }
